--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <meta name="description" content="Gridea | 一个静态博客写作客户端 | 记录生活、心情、知识、笔记、创意...">
 </head>
 <body>
-  <div id="app" class="antialiased flex flex-col min-h-screen"><header class="border-gray-200 bg-white"><div class="max-w-6xl mx-auto sm:flex sm:justify-between sm:items-center sm:px-4 sm:py-3"><div class="flex items-center justify-between px-4 py-3 sm:p-0"><a href="https://open.gridea.dev/" class="flex items-center"><img src="./assets/gridea.png" alt="Gridea" class="h-8 mr-2" style="transform: scale(1.2);"> <span class="font-medium text-xl">Gridea</span></a> <div class="sm:hidden"><button type="button" class="block text-gray-500 hover:text-gray-500 focus:text-gray-500 focus:outline-none"><svg viewBox="0 0 24 24" class="h-6 w-6 fill-current"><!----> <path fill-rule="evenodd" d="M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z"></path></svg></button></div></div> <nav class="px-2 pt-2 pb-4 sm:flex sm:p-0 hidden"><a href="https://open.gridea.dev/" class="block px-2 py-1 text-gray-500 font-semibold rounded hover:bg-gray-100">
+  <div id="app" class="antialiased flex flex-col min-h-screen"><header class="border-gray-200 bg-white"><div class="max-w-6xl mx-auto sm:flex sm:justify-between sm:items-center sm:px-4 sm:py-3"><div class="flex items-center justify-between px-4 py-3 sm:p-0"><a href="" class="flex items-center"><img src="./assets/gridea.png" alt="Gridea" class="h-8 mr-2" style="transform: scale(1.2);"> <span class="font-medium text-xl">Gridea</span></a> <div class="sm:hidden"><button type="button" class="block text-gray-500 hover:text-gray-500 focus:text-gray-500 focus:outline-none"><svg viewBox="0 0 24 24" class="h-6 w-6 fill-current"><!----> <path fill-rule="evenodd" d="M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z"></path></svg></button></div></div> <nav class="px-2 pt-2 pb-4 sm:flex sm:p-0 hidden"><a href="" class="block px-2 py-1 text-gray-500 font-semibold rounded hover:bg-gray-100">
           首页
         </a> <a href="https://open.gridea.dev/docs" class="block px-2 py-1 text-gray-500 font-semibold rounded hover:bg-gray-100 mt-1 sm:mt-0 sm:ml-2">
           文档
@@ -36,7 +36,7 @@
               可以，写博客的那个劲儿又回来了
             </h1> <p class="mt-2 text-gray-600 sm:mt-4 sm:text-xl font-thin">
               Gridea 是一个静态博客写作客户端，帮助你更容易地构建并管理博客或任何静态站点。
-            </p> <div class="flex justify-center items-center"><a href="https://open.gridea.dev/#started" class="py-2 pl-4 pr-2 border border-2 border-black bg-black hover:bg-yellow-500 hover:text-gray-900 text-white shadow-lg text-lg mt-16 inline-block mx-4 inline-flex items-center transition duration-300">
+            </p> <div class="flex justify-center items-center"><a href="#started" class="py-2 pl-4 pr-2 border border-2 border-black bg-black hover:bg-yellow-500 hover:text-gray-900 text-white shadow-lg text-lg mt-16 inline-block mx-4 inline-flex items-center transition duration-300">
                 立即开始
                 <i class="ri-arrow-right-s-line ml-2"></i></a> <a href="https://github.com/getgridea/gridea" target="_blank" class="py-2 pl-2 pr-4 border border-2 border-gray-800 bg-white hover:bg-gray-200 text-black shadow-lg text-lg mt-16 inline-block mx-4 inline-flex items-center transition duration-300"><i class="ri-github-line mr-2"></i>
                 GitHub
